# qggroi

./: README.md  pyproject.toml  test.py
src/qggroi/: __main__.py  calculate.py  data.py  locate.py  output.py  plot.py  roi.py
